(wip) try workaround